--- a/index.html
+++ b/index.html
@@ -10,44 +10,19 @@
   </head>
   <body>
     <div class="imagesContainer">
-      <div
-        class="imageDiv active"
-        style="
-          background-image: url('https://images.pexels.com/photos/9813791/pexels-photo-9813791.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-        "
-      >
+      <div class="imageDiv active adiyaman">
         <h3>ADIYAMAN</h3>
       </div>
-      <div
-        class="imageDiv"
-        style="
-          background-image: url('https://images.pexels.com/photos/1549326/pexels-photo-1549326.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-        "
-      >
+      <div class="imageDiv istanbul">
         <h3>İSTANBUL</h3>
       </div>
-      <div
-        class="imageDiv"
-        style="
-          background-image: url('https://images.pexels.com/photos/10593349/pexels-photo-10593349.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-        "
-      >
+      <div class="imageDiv kars">
         <h3>KARS</h3>
       </div>
-      <div
-        class="imageDiv"
-        style="
-          background-image: url('https://images.pexels.com/photos/2656502/pexels-photo-2656502.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-        "
-      >
+      <div class="imageDiv izmir">
         <h3>İZMİR</h3>
       </div>
-      <div
-        class="imageDiv"
-        style="
-          background-image: url('https://images.pexels.com/photos/15584434/pexels-photo-15584434.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
-        "
-      >
+      <div class="imageDiv bolu">
         <h3>BOLU</h3>
       </div>
     </div>
