--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Tour Places Expanding Cards(JS-HTML-CSS)</title>
   </head>
   <body>
+    <h1>TOUR PLACES</h1>
     <div class="imagesContainer">
       <div class="imageDiv active adiyaman">
         <h3>ADIYAMAN</h3>
